kube/electroncash-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: electroncash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.electroncash.org
    - electroncash.org
    secretName: electroncash-tls
  defaultBackend:
    service:
      name: electroncash
      port:
        number: 89
  rules:
  - host: electroncash.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: electroncash
            port:
              number: 89
  - host: www.electroncash.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: electroncash
            port:
              number: 89
